# Auto-Scholar

./: .dockerignore  .env.example  .env.minimal  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INTERVIEW_STORIES.md  LICENSE  MOCKING_GUIDE.md  Makefile  README.md  README_zh.md  RESUME_Auto-Scholar_清屿科技.md  SECURITY.md  TESTING.md  docker-compose.yml  proposal.md  proposal2.md  proposal3.md  pyproject.toml  requirements.txt  ruff.toml
app/: constants.py  main.py  nodes.py  schemas.py  state.py  workflow.py
backend/: constants.py  main.py  nodes.py  prompts.py  schemas.py  state.py  workflow.py
config/: models.yaml
docs/: API.md  ARCHITECTURE.md  BENCHMARK_RESULTS.md  DEVELOPMENT.md  INFRASTRUCTURE.md  PERFORMANCE_OPTIMIZATION_IMPLEMENTATION.md  README.md
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
scripts/: diagnose_timeout.py  init_db.py  init_infrastructure.sh  init_minio.py  setup-dev.sh  test_gateway_integration.py  verify_infrastructure.sh
tests/: benchmark_cost_routing.py  benchmark_evaluation.py  benchmark_sse.py  benchmark_workflow.py  conftest.py  test_capabilities.py  test_charts.py  test_claim_verification.py  test_config_loader.py  test_constants.py  test_context_engineering.py  test_contracts.py  test_conversation.py  test_cost_tracker_enhanced.py  test_embedder.py  test_evaluation.py  test_event_queue.py  test_exporter.py  test_extractor_parallel.py  test_fulltext_api.py  test_integration.py  test_json_repair.py  test_model_routing.py  test_multi_source.py  test_pdf_parser.py  test_phase1_features.py  test_phase2_integration.py  test_phase_1_2_integration.py  (+11 more)
(+75 files in other folders)
