[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-scholar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "langgraph>=0.2.0,<1.0.0",
    "langchain>=0.3.0,<1.0.0",
    "langchain-openai>=0.2.0,<1.0.0",
    "openai>=1.51.0,<2.0.0",
    "aiohttp>=3.10.0,<4.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "python-multipart>=0.0.12,<1.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "matplotlib>=3.9.0,<4.0.0",
    "minio>=7.2.0,<8.0.0",
    "redis>=5.0.0,<6.0.0",
    "pypdf>=4.0.0,<5.0.0",
    "tiktoken>=0.5.0,<1.0.0",
    "qdrant-client>=1.7.0,<2.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "httpx>=0.27.0,<1.0.0",
    "ruff>=0.5.0,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
    "types-PyYAML>=6.0,<7.0",
    "pre-commit>=3.7.0,<4.0.0",
    "jsonschema>=4.20.0,<5.0.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external APIs",
]

[tool.coverage.run]
branch = true
source = ["backend"]
omit = ["backend/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
